# WMS-Light

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: categories_routes.py  dashboard_repo.py  deps.py  products_routes.py  transaction_routes.py  users_routes.py
backend/app/core/: config.py  exceptions.py  exeptions.py  logger.py
backend/app/db/: database.py  seeds.py
backend/app/db/models/: __init__.py  categories.py  products.py  stock.py  transactions.py  users.py
backend/app/db/repositories/: categories_repo.py  dashboard_repo.py  products_repo.py  transactions_repo.py  users_repo.py
backend/app/schemas/: auth.py  categories.py  dashboard.py  products.py  transactions.py
backend/app/utils/: jwt.py  pas_hashing.py
frontend/: Dockerfile  dashboard.html  index.html  nginx.conf  worker.html
frontend/css/: style.css
frontend/js/: api.js  dashboard.js  login.js  ui.js  worker.js
