[project]
name = "WMS-Light"
version = "0.1.0"
description = "Локальная система управления складскими остатками с поддержкой QR-кодирования товаров, ролевой авторизацией и автоматическим логированием транзакций. Разработано на FastAPI и PostgreSQL в Docker-контейнерах."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.23.0",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
